--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "skipLibCheck": true,
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "outDir": "dist"
   },
   "include": ["src"]
 }
